--- a/web/src/app/youtube-channel/youtube-channel.component.html
+++ b/web/src/app/youtube-channel/youtube-channel.component.html
@@ -1,7 +1,7 @@
 <div class="youtube-channel">
   <div class="submenu" fxLayout="row" fxLayoutAlign="space-between center">
     <div></div>
-    <div class="updated-at">更新于 {{ updatedAt | date: "MM/dd HH:mm" }}</div>
+    <div class="updated-at">更新于 {{ updatedAt | format: "MM/DD HH:mm" }}</div>
   </div>
   <div class="table-container">
     <table
