feat(web): mark text with i18n attributes

--- a/web/src/app/header/header.component.html
+++ b/web/src/app/header/header.component.html
@@ -10,7 +10,8 @@
   <span class="spacer"></span>
   <button
     mat-icon-button
-    matTooltip="切換夜間模式"
+    matTooltip="Toggle Dark Mode"
+    i18n-matTooltip="@@toggleDarkMode"
     (click)="config.toggleDarkMode()"
   >
     <mat-icon svgIcon="theme"></mat-icon>
