--- a/web/src/app/sidenav/sidenav.component.html
+++ b/web/src/app/sidenav/sidenav.component.html
@@ -7,7 +7,7 @@
       (click)="buttonClick.emit()"
     >
       <mat-icon mat-list-icon svgIcon="youtube"></mat-icon>
-      <p mat-line>YouTube 頻道</p>
+      <p mat-line i18n="@@youtubeChannel">YouTube Channel</p>
     </a>
     <a
       mat-list-item
@@ -16,7 +16,7 @@
       (click)="buttonClick.emit()"
     >
       <mat-icon mat-list-icon svgIcon="bilibili"></mat-icon>
-      <p mat-line>Bilibili 頻道</p>
+      <p mat-line i18n="@@bilibiliChannel">Bilibili Channel</p>
     </a>
     <a
       mat-list-item
@@ -25,7 +25,7 @@
       (click)="buttonClick.emit()"
     >
       <mat-icon mat-list-icon svgIcon="stream"></mat-icon>
-      <p mat-line>YouTube 直播</p>
+      <p mat-line i18n="@@youtubeStream">YouTube Stream</p>
     </a>
     <a
       mat-list-item
@@ -34,7 +34,7 @@
       (click)="buttonClick.emit()"
     >
       <mat-icon mat-list-icon svgIcon="calendar"></mat-icon>
-      <p mat-line>YouTube 預定直播</p>
+      <p mat-line i18n="@@youtubeSchedule">YouTube Schedule</p>
     </a>
     <a
       mat-list-item
@@ -43,7 +43,7 @@
       (click)="buttonClick.emit()"
     >
       <mat-icon mat-list-icon svgIcon="tune"></mat-icon>
-      <p mat-line>設置</p>
+      <p mat-line i18n="@@settings">Settings</p>
     </a>
     <!-- TODO: -->
     <!-- <a mat-list-item routerLink="/stream-summary">
