--- a/web/src/app/vtubers-detail/vtubers-detail.component.html
+++ b/web/src/app/vtubers-detail/vtubers-detail.component.html
@@ -39,7 +39,8 @@
           [youtube]="true"
           [results]="youtubeSubs"
           [dateFormatting]="dateFormatting"
-          [label]="'YouTube 訂閱'"
+          i18n-label="@@youtubeSubscribers"
+          label="YouTube Subscribers"
         ></hs-area-chart>
       </div>
 
@@ -48,7 +49,8 @@
           [youtube]="false"
           [results]="bilibiliSubs"
           [dateFormatting]="dateFormatting"
-          [label]="'Bilibili 訂閱'"
+          i18n-label="@@bilibiliSubscribers"
+          label="Bilibili Subscribers"
         ></hs-area-chart>
       </div>
 
@@ -57,7 +59,8 @@
           [youtube]="true"
           [results]="youtubeViews"
           [dateFormatting]="dateFormatting"
-          [label]="'YouTube 播放'"
+          i18n-label="@@youtubeViews"
+          label="YouTube Views"
         ></hs-area-chart>
       </div>
 
@@ -66,7 +69,8 @@
           [youtube]="false"
           [results]="bilibiliViews"
           [dateFormatting]="dateFormatting"
-          [label]="'Bilibili 播放'"
+          i18n-label="@@bilibiliViews"
+          label="Bilibili Views"
         ></hs-area-chart>
       </div>
     </div>
