--- a/web/src/_theme.scss
+++ b/web/src/_theme.scss
@@ -23,6 +23,7 @@
   @include mat-divider-theme($theme);
   @include mat-icon-theme($theme);
   @include mat-list-theme($theme);
+  @include mat-menu-theme($theme);
   @include mat-progress-spinner-theme($theme);
   @include mat-sidenav-theme($theme);
 
@@ -59,6 +60,7 @@
   @include mat-checkbox-typography($config);
   @include mat-icon-typography($config);
   @include mat-list-typography($config);
+  @include mat-menu-typography($config);
   @include mat-progress-spinner-typography($config);
   @include mat-sidenav-typography($config);
   @include mat-slide-toggle-typography($config);
