--- a/web/src/app/streams-detail/streams-detail.component.html
+++ b/web/src/app/streams-detail/streams-detail.component.html
@@ -30,7 +30,7 @@
           class="profile"
           src="/assets/thumbnail/{{ stream.vtuberId }}.jpg"
         />
-        <span class="name">{{ (stream.vtuberId | vtubers).name }}</span>
+        <span class="name">{{ stream.vtuberId | name }}</span>
       </a>
       <div fxLayout="row" fxLayoutAlign="space-around">
         <div flex="50">
