--- a/web/src/app/vtubers-detail/vtubers-detail.component.html
+++ b/web/src/app/vtubers-detail/vtubers-detail.component.html
@@ -2,7 +2,7 @@
   <div class="content">
     <div class="info">
       <img class="profile" src="/assets/profiles/{{ vtuberId }}.jpg" />
-      <div class="name">{{ (vtuberId | vtubers).name }}</div>
+      <div class="name">{{ vtuberId | name }}</div>
     </div>
     <!-- <div
       class="number"
