--- a/web/src/app/youtube-schedule-stream/youtube-schedule-stream.component.html
+++ b/web/src/app/youtube-schedule-stream/youtube-schedule-stream.component.html
@@ -30,7 +30,7 @@
             class="profile"
             src="/assets/thumbnail/{{ stream.vtuberId }}.jpg"
           />
-          <span class="name">{{ (stream.vtuberId | vtubers).name }}</span>
+          <span class="name">{{ stream.vtuberId | name }}</span>
           <span title="{{ stream.scheduleTime | date: 'yyyy/MM/dd HH:mm:ss' }}">
             {{ stream.scheduleTime | distance: (everyMinute$ | async) }}
           </span>
