--- a/web/src/app/youtube-stream/youtube-stream.component.html
+++ b/web/src/app/youtube-stream/youtube-stream.component.html
@@ -38,7 +38,7 @@
             <mat-icon svgIcon="open_in_new"></mat-icon>
           </a>
         </div>
-        <div class="title" title="{{ stream.title }}">
+        <div class="title" title="{{ stream.title }}" ellipsis>
           {{ stream.title }}
         </div>
         <div
