--- a/web/src/app/youtube-schedule-stream/youtube-schedule-stream.component.html
+++ b/web/src/app/youtube-schedule-stream/youtube-schedule-stream.component.html
@@ -22,7 +22,7 @@
             <mat-icon svgIcon="open_in_new"></mat-icon>
           </a>
         </div>
-        <div class="title" title="{{ stream.title }}">
+        <div class="title" title="{{ stream.title }}" ellipsis>
           {{ stream.title }}
         </div>
         <div class="time" fxLayout="row" fxLayoutAlign="start center">
