faet(web): *-stream page styling

--- a/web/src/app/youtube-schedule-stream/_youtube-schedule-stream.theme.scss
+++ b/web/src/app/youtube-schedule-stream/_youtube-schedule-stream.theme.scss
@@ -36,7 +36,7 @@
       font-weight: mat-font-weight($config, body-1);
     }
 
-    .time {
+    .meta {
       font-size: mat-font-size($config, caption);
       font-weight: mat-font-weight($config, body-1);
     }
