--- a/web/src/app/youtube-stream/youtube-stream.component.html
+++ b/web/src/app/youtube-stream/youtube-stream.component.html
@@ -38,15 +38,13 @@
             <mat-icon svgIcon="open_in_new"></mat-icon>
           </a>
         </div>
-        <div class="title" title="{{ stream.title }}" ellipsis>
-          {{ stream.title }}
-        </div>
         <div
-          class="viewers"
-          [ngClass]="{ current: !stream.endTime }"
-          fxLayout="row"
-          fxLayoutAlign="start center"
-        >
+          class="title"
+          title="{{ stream.title }}"
+          ellipsis
+          [ellipsis-content]="stream.title"
+        ></div>
+        <div class="viewers" [ngClass]="{ current: !stream.endTime }">
           <ng-container *ngIf="stream.endTime; else live">
             <mat-icon
               class="view-icon"
@@ -71,13 +69,17 @@
             {{ (stream.maxViewerCount | number) || "----" }}
           </span>
         </div>
-        <div class="time" fxLayout="row" fxLayoutAlign="start center">
+        <div class="meta" fxLayout="row" fxLayoutAlign="start center">
           <img
             class="profile"
             src="/assets/thumbnail/{{ stream.vtuberId }}.jpg"
           />
           <span class="name">{{ stream.vtuberId | name }}</span>
-          <span title="{{ stream.start | date: 'yyyy/MM/dd HH:mm:ss' }}">
+          <span class="dot">•</span>
+          <span
+            class="time"
+            title="{{ stream.start | date: 'yyyy/MM/dd HH:mm:ss' }}"
+          >
             {{ stream.startTime | distance: (everyMinute$ | async) }}
           </span>
         </div>
