--- a/web/src/app/youtube-stream/_youtube-stream.theme.scss
+++ b/web/src/app/youtube-stream/_youtube-stream.theme.scss
@@ -51,7 +51,7 @@
       font-weight: mat-font-weight($config, body-1);
     }
 
-    .time,
+    .meta,
     .viewers {
       font-size: mat-font-size($config, caption);
       font-weight: mat-font-weight($config, body-1);
