--- a/web/src/app/shared/area-chart/area-chart.component.html
+++ b/web/src/app/shared/area-chart/area-chart.component.html
@@ -1,30 +1,29 @@
 <ngx-charts-area-chart
-  class="chart"
+  class="ngx-chart"
   [autoScale]="autoScale"
-  [scheme]="youtube ? youtubeScheme : bilibiliScheme"
+  [scheme]="scheme"
   [results]="results"
   [gradient]="true"
   [xAxis]="true"
   [yAxis]="true"
-  [xAxisTickFormatting]="dateFormatting"
+  [xAxisTickFormatting]="dateFormatter"
   [yAxisTickFormatting]="numFormatting"
   [legend]="false"
-  [xAxisLabel]="label"
-  [showXAxisLabel]="!!label"
+  [showXAxisLabel]="false"
   [showYAxisLabel]="false"
   [roundDomains]="true"
   [timeline]="timeline"
 >
   <ng-template #tooltipTemplate let-model="model">
     <p class="tooltip-caption">
-      {{ model.name | format: "MM/DD HH:mm" }}
+      {{ timeForamt(model.name) }}
     </p>
     <p class="tooltip-caption">{{ model.value | number }}</p>
   </ng-template>
 
   <ng-template #seriesTooltipTemplate let-model="model">
     <p class="tooltip-caption">
-      {{ model[0].name | format: "MM/DD HH:mm" }}
+      {{ timeForamt(model[0].name) }}
     </p>
     <p class="tooltip-caption">{{ model[0].value | number }}</p>
   </ng-template>
