feat(web): implement style guide

--- a/web/src/styles/layout/_header.scss
+++ b/web/src/styles/layout/_header.scss
@@ -7,6 +7,10 @@
   left: 0;
   z-index: 10;
 
+  align-items: center;
+  flex-direction: row;
+  display: flex;
+
   .logo {
     height: 24px;
     width: 90px;
