--- a/web/src/styles/layout/_sidenav.scss
+++ b/web/src/styles/layout/_sidenav.scss
@@ -1,4 +1,4 @@
-.sidenav-container {
+.sidenav {
   width: 250px;
   min-height: 100%;
   background-color: white;
@@ -29,8 +29,13 @@
   }
 }
 
+.drawer-content {
+  margin-top: 64px;
+  min-height: calc(100vh - 64px);
+}
+
 .dark {
-  .sidenav-container {
+  .sidenav {
     background-color: rgba(40, 40, 40, 0.98);
   }
 }
