--- a/web/src/styles/theme/_sidenav.scss
+++ b/web/src/styles/theme/_sidenav.scss
@@ -1,16 +1,16 @@
 @import "~@angular/material/theming";
 
 @mixin sidenav-theme($theme) {
-  $is-dark-theme: map-get($theme, is-dark);
-  $foreground: map-get($theme, foreground);
+  $is-dark-theme: map-get($theme, "is-dark");
+  $foreground: map-get($theme, "foreground");
 
-  .sidenav-container {
+  .sidenav {
     .copyright {
-      color: mat-color($foreground, hint-text);
+      color: mat-color($foreground, "hint-text");
     }
 
     .link {
-      color: mat-color($foreground, secondary-text);
+      color: mat-color($foreground, "secondary-text");
     }
 
     .list > a {
@@ -32,15 +32,15 @@
 }
 
 @mixin sidenav-typography($config) {
-  .sidenav-container {
+  .sidenav {
     .info {
-      font-size: mat-font-size($config, button);
-      font-weight: mat-font-weight($config, button);
+      font-size: mat-font-size($config, "button");
+      font-weight: mat-font-weight($config, "button");
     }
 
     .copyright {
-      font-size: mat-font-size($config, caption);
-      font-weight: mat-font-weight($config, caption);
+      font-size: mat-font-size($config, "caption");
+      font-weight: mat-font-weight($config, "caption");
     }
   }
 }
